--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -1,5 +1,15 @@
 - name: Create Homework Assignment project 
 # Use tower module or tower-cli to create Ansible Tower project. Name of the project is specifed in ./vars/main.yml
+  tower_project:
+    name: "{{proj_name}}"
+    scm_type: git
+    scm_url: "{{github_repo}}"
+    scm_update_on_launch: yes
+
+- name: sync tower with github
+  command: |
+    tower-cli project update -n "{{proj_name}}" 
+    
 
 - name: Machine Credentail to connect to workstation using openstack.pub
   tower_credential:
