added smoketest for OpenStack

--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -8,7 +8,15 @@
     register: openstack_info
     tags:
       - osp.smoke
+  
   - name: Curl website
+    uri:
+      url: "http://{{inventory_hostname}}"
+      return_content: yes
+      timeout: 300
+    register: response
+    failed_when: "'Ansible has done its job' not in response.content"
+
 
   - name: Fail if 'Ansible has done its job' is not in the page content
     fail:
