--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -10,15 +10,16 @@
       - osp.smoke
   
   - debug: 
-      var: inventory_hostname
+      var: openstack_info
+
+# TODO : filter out IP from openstack_info     
 
   - name: Curl website
     uri:
       url: "http://{{inventory_hostname}}"
       return_content: yes
       timeout: 300
-    register: response
-    failed_when: "'Ansible has done its job' not in response.content"
+    register: webpage
 
 
   - name: Fail if 'Ansible has done its job' is not in the page content
