--- a/roles/app-tier/handlers/main.yml
+++ b/roles/app-tier/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for app-tier
+
+- name: start tomcat
+  service:
+    name: "{{ package }}"
+    state: started
+  tags: ['apps', 'tomcat']    
