--- a/roles/app-tier/tasks/main.yml
+++ b/roles/app-tier/tasks/main.yml
@@ -1,2 +1,28 @@
 ---
-# tasks file for app-tier
+# tasks file for app-layer
+
+- block:
+    - name: install {{ package }}
+      yum:
+        name: "{{ package }}"
+        state: latest
+
+    - name: enable {{ package }} at boot
+      service:
+        name: "{{ package }}"
+        enabled: yes
+
+    - name: create tomcat default web directory
+      file:
+        path: "{{ tomcat_root }}"
+        state: directory
+      notify: start tomcat
+
+    - name: copy static index.html to tomcat webroot
+      template:
+        src: index.html.j2
+        dest: "{{ tomcat_root }}/index.html"
+        mode: 0644
+  tags: ['apps', 'tomcat']
+
+      
