--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -1,2 +1,25 @@
 ---
 # tasks file for base-config
+
+block:
+    - name: enable sudo without tty for some ansible commands
+      replace:
+        path: /etc/sudoers
+        regexp: '^Defaults\s*requiretty'
+        replace: 'Defaults  !requiretty'
+        backup: yes
+
+    - name: enable repos
+      template:
+        src: repos_template.j2
+        dest: /etc/yum.repos.d/open_three-tier-app.repo
+        mode: 0644
+
+
+
+    - name: install common packages
+      package:
+        name: 
+        - httpie
+        - python-pip 
+tags: ['base-config']
