--- a/roles/db-tier/tasks/main.yml
+++ b/roles/db-tier/tasks/main.yml
@@ -1,2 +1,19 @@
 ---
 # tasks file for db-tier
+
+- name: setup db layer
+  become: yes
+  hosts: appdbs
+  tasks:
+    - name: Perform Common Configuration 
+      include_role:
+        name: common-config
+      tags: ['base-config']
+    - name: Setup DB 
+      include_role:
+        name: geerlingguy.postgresql
+      tags: ['dbs', 'postgres']
+
+      
+
+
