fixed error with missing -

--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for base-config
 
-block:
+- block:
     - name: enable sudo without tty for some ansible commands
       replace:
         path: /etc/sudoers
@@ -22,4 +22,4 @@ block:
         name: 
         - httpie
         - python-pip 
-tags: ['base-config']
+  tags: ['base-config']
