--- a/aws_creds.yml
+++ b/aws_creds.yml
@@ -48,16 +48,16 @@
 #      job_type: run
 #      playbook: site-3tier-app.yml
 #      project: "Homework Assignment"      
-  - name: Update Prod Smoke Job template
-    tower_job_template:
-      name: "Smoke test Prod env"
-      machine_credential: "Creds for AWS instances"
-      tower_host: tower1.{{tower_guid}}.example.opentlc.com
-      tower_username: admin
-      tower_password: r3dh4t1!
-      state: present
-      job_type: run
-      playbook: site-smoketest-aws.yml
-      project: "Homework Assignment"
+#  - name: Update Prod Smoke Job template
+#    tower_job_template:
+#      name: "Smoke test Prod env"
+#      machine_credential: "Creds for AWS instances"
+#      tower_host: tower1.{{tower_guid}}.example.opentlc.com
+#      tower_username: admin
+#      tower_password: r3dh4t1!
+#      state: present
+#      job_type: run
+#      playbook: site-smoketest-aws.yml
+#      project: "Homework Assignment"
 
     
