--- a/site-smoketest-aws.yml
+++ b/site-smoketest-aws.yml
@@ -3,3 +3,24 @@
   tasks:
   - name: Use Uri module for wrting smoke test.
   - name: Fail if 'Ansible has done its job' is not in the page content
+
+ 
+  - debug: 
+      var: inventory_hostname    
+
+#  - name: Curl website
+#    uri:
+#      url: "http://{{openstack_info.ansible_facts.openstack_servers[0].accessIPv4}}"
+#      return_content: yes
+#      timeout: 300
+#    register: webpage
+
+#  - debug: 
+#      var: webpage
+
+#  - name: Fail if 'Ansible has done its job' is not in the page content
+#    fail:
+#    when: "'Ansible has done its job' not in webpage.content"
+#    tags:
+#      - osp.smoke
+
