--- a/site-smoketest-aws.yml
+++ b/site-smoketest-aws.yml
@@ -1,12 +1,12 @@
 - hosts: frontends
   gather_facts: false
   tasks:
-  - name: Use Uri module for wrting smoke test.
-  - name: Fail if 'Ansible has done its job' is not in the page content
-
- 
   - debug: 
       var: inventory_hostname    
+ # - name: Use Uri module for wrting smoke test.
+ # - name: Fail if 'Ansible has done its job' is not in the page content
+
+ 
 
 #  - name: Curl website
 #    uri:
