--- a/site-smoketest-aws.yml
+++ b/site-smoketest-aws.yml
@@ -14,5 +14,5 @@
  
   - name: Fail if 'Ansible has done its job' is not in the page content
     fail:
-    when: "'Ansible has done its job' not in webpage.content"
+    when: "'Ansile has done its job' not in webpage.content"
 
