--- a/roles/osp-instance-delete/tasks/main.yml
+++ b/roles/osp-instance-delete/tasks/main.yml
@@ -7,7 +7,11 @@
 
   - debug: 
       var: openstack_info.ansible_facts.openstack_servers    
+  
 
-
-#  - name: Delete instances
-   
+  - name: Delete instances
+    os_server:
+      name: "{{ item.name }}"
+      image: "{{ item.image }}"
+      state: absent  
+    with_items: "{{openstack_info.ansible_facts.openstack_servers}}"
